--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,35 @@
 body {
-  background-color: bisque;
+  font-family: 'Lato', 'roboto', sans-serif;
+  background-color: #fff;
+  color: #000;
+  margin: 0;
 }
 
-.hello {
-  color: red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 20%;
+  background-color: #1f2937;
+  color: #f9faf8;
+}
+
+.logo {
+  font-size: 32px;
+  font-weight: 900;
+  font-style: italic;
+  color: #f9faf8
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+  list-style-type: none;
 }
