--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 body {
   font-family: 'Lato', 'roboto', sans-serif;
-  background-color: #fff;
+  background-image: url('http://127.0.0.1:5500/dist/b190d3df533764e4f333.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  image-rendering: -webkit-optimize-contrast;
   color: #000;
   margin: 0;
 }
@@ -9,7 +13,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 24px 20%;
+  padding: 18px 20%;
   background-color: #1f2937;
   color: #f9faf8;
 }
@@ -34,8 +38,67 @@ ul {
   list-style-type: none;
 }
 
-.main {
-  height: 75vh;
+.grid-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 40px;
+  margin: 0 9%;
+}
+
+.grid-item {
+  width: auto;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  font-size: 30px;
+  text-align: center;
+  box-shadow: 2px 2px 17px 0;
+}
+
+img {
+  width: 100%;
+  height: 240px;
+  border-radius: 5px;
+}
+
+.card-title {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 4%;
+}
+
+h2,
+.likes {
+  font-size: 13px;
+}
+
+.material-symbols-outlined {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.likes {
+  text-align: start;
+  padding: 0 4%;
+}
+
+p {
+  margin: 0;
+}
+
+button {
+  width: 90%;
+  margin: 10px 9px;
+  background-color: #ec5242;
+  color: #f0f2f5;
+  border: 0;
+  padding: 2%;
+  border-radius: 5px;
 }
 
 footer {
@@ -43,7 +106,7 @@ footer {
   text-align: center;
   background-color: #1f2937;
   color: #fff;
-  padding: 32px 0;
+  padding: 22px 0;
   vertical-align: middle;
 }
 
