Add markup for popup window

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
-  font-family: 'Lato', 'roboto', sans-serif;
-  background-color: #fff;
+  font-family: -apple-system, 'Lato', 'roboto', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;;
+  background-color: #f5f6f7;;
   color: #000;
   margin: 0;
 }
@@ -10,8 +10,9 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 24px 20%;
-  background-color: #1f2937;
-  color: #f9faf8;
+  background-color: #0a0a23;
+  color: #fff;
+  border-bottom: 4px solid #fdb347;
 }
 
 .logo {
@@ -26,7 +27,7 @@ a {
   color: #fff;
 }
 
-ul {
+.links {
   display: flex;
   margin: 0;
   padding: 0;
@@ -41,12 +42,125 @@ ul {
 footer {
   width: 100%;
   text-align: center;
-  background-color: #1f2937;
+  background-color: #0a0a23;
   color: #fff;
+  border-top: 4px solid #fdb347;
   padding: 32px 0;
   vertical-align: middle;
 }
 
 footer * {
   margin: 2px;
+}
+
+#popup {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #f5f6f7;
+  z-index: 100;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.close {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 60px);
+  padding: 16px 0 16px 20px;
+}
+
+.close h1 {
+  flex: 1;
+  text-align: center;
+}
+
+.close a img {
+  width: 36px;
+  height: 36px;
+}
+
+.description{
+  width: 60%;
+  margin: 0 auto;
+}
+
+.popup img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+#recipe-info{
+  width: 50%;
+  display: flex;
+  gap: 10px;
+  margin: 0 auto;
+}
+
+.div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 8px 0;
+}
+
+#recipe-info{
+  width: 100%;
+  display: flex;
+  gap: 8px;
+  margin: 0 auto;
+}
+
+#recipe-info .recipe {
+  width: 50%;
+}
+
+#recipe-info .recipe h3 {
+  width: 100%;
+  margin: 20px 0 5px;
+  text-align: left;
+}
+
+#recipe-info .recipe ul, #recipe-info .recipe ol {
+  margin-left: -20px;
+}
+
+#recipe-info .recipe li { 
+  margin: 8px 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  padding: 54px 0;
+}
+
+form input[type=text], textarea {
+  padding: 0.5em;
+  border: 1px solid #b8b7b7;
+  border-radius: 4px;
+  width: 100%;
+  margin: 8px 0;
+}
+
+form textarea {
+  height: 120px;
+}
+
+form input[type=submit] {
+  width: 50%;
+  padding: 0.5em 1em;
+  align-self: center;
+  border-radius: 4px;
+  background-color: #080808;
+  color: #fff;
 }
