--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, 'Lato', 'roboto', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-  background-color: #f5f6f7;
+  background-image: url('http://127.0.0.1:5500/dist/b190d3df533764e4f333.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  image-rendering: -webkit-optimize-contrast;
   color: #000;
   margin: 0;
 }
@@ -35,8 +43,67 @@ a {
   list-style-type: none;
 }
 
-.main {
-  height: 75vh;
+.grid-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 40px;
+  margin: 0 9%;
+}
+
+.grid-item {
+  width: auto;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  font-size: 30px;
+  text-align: center;
+  box-shadow: 2px 2px 17px 0;
+}
+
+img {
+  width: 100%;
+  height: 240px;
+  border-radius: 5px;
+}
+
+.card-title {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 4%;
+}
+
+h2,
+.likes {
+  font-size: 13px;
+}
+
+.material-symbols-outlined {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.likes {
+  text-align: start;
+  padding: 0 4%;
+}
+
+p {
+  margin: 0;
+}
+
+button {
+  width: 90%;
+  margin: 10px 9px;
+  background-color: #ec5242;
+  color: #f0f2f5;
+  border: 0;
+  padding: 2%;
+  border-radius: 5px;
 }
 
 footer {
