--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,11 @@ h2,
   display: flex;
   align-items: center;
   text-align: center;
+  cursor: pointer;
+}
+
+.material-symbols-outlined:active {
+  color: #d23c22;
 }
 
 .likes {
