Change background color for button

--- a/src/style.css
+++ b/src/style.css
@@ -102,13 +102,19 @@ p {
 }
 
 button {
-  width: 90%;
-  margin: 10px 9px;
-  background-color: #ec5242;
+  width: 100%;
+  margin: 10px 0;
+  background-color: #234342;
   color: #f0f2f5;
   border: 0;
   padding: 2%;
   border-radius: 5px;
+}
+
+button:hover {
+  background-color: #ec5242;
+  color: #fff;
+  cursor: pointer;
 }
 
 footer {
@@ -134,15 +140,6 @@ footer * {
   }
 }
 
-@keyframes slideToTopRight {
-  from {
-    transform: translate(0, 0);
-  }
-  to {
-    transform: translate(100%, -100%);
-  }
-}
-
 .close_popup {
   transform: scale(0);
   transition: transform 2s;
@@ -160,6 +157,11 @@ footer * {
   overflow-y: scroll;
   overflow-x: hidden;
   animation: slideUp 2s;
+  color: #080101;
+}
+
+#popup li {
+  color: #011a19;
 }
 
 .close {
@@ -270,19 +272,25 @@ textarea {
   margin: 8px 0;
 }
 
+#add-comment input[type=text]:focus {
+  border: 1px solid #b8b7b7;
+}
+
 #add-comment input[type=submit] {
   margin-top: 16px;
   padding: 8px 32px;
   align-self: flex-start;
   border: none;
   border-radius: 4px;
-  background-color: #ec5242;
+  background-color: #234342;
   color: #fff;
+  width: 32%;
 }
 
 #add-comment input[type=submit]:hover {
-  background-color: #234342;
+  background-color: #ec5242;
   color: #fff;
+  cursor: pointer;
 }
 
 #add-comment h2 {
